URL encoding in URIReader